--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   http: ^1.3.0
   flutter_bloc: ^9.0.0
+  intl: ^0.20.2
+  google_nav_bar: ^5.0.7
   
 
 dev_dependencies:
