--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   intl: ^0.20.2
   google_nav_bar: ^5.0.7
   location: ^8.0.0
+  shared_preferences: ^2.5.2
+  equatable: ^2.0.7
   
 
 dev_dependencies:
