--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   shared_preferences: ^2.5.2
   equatable: ^2.0.7
   units_converter: ^3.0.2
+  flutter_spinkit: ^5.2.1
   
 
 dev_dependencies:
