--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   equatable: ^2.0.7
   units_converter: ^3.0.2
   flutter_spinkit: ^5.2.1
+  flutter_launcher_icons: ^0.14.3
   
 
 dev_dependencies:
@@ -69,8 +70,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/weather/icons/
+    - assets/weather/launcher/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
